src/App.css
#root {
  max-width: 1280px;
  height: 100%;
  margin: 0 auto;
  text-align: start;
}

.genre {
  display: flex;
  position: sticky;
  justify-content: end;
  gap: 0.5em;

  align-items: center;
  p {
    cursor: default;
  }

  select {
    appearance: base-select;
    border: none;
    cursor: pointer;

    &::picker-icon {
      color: #999;
      transition: 0.4s rotate;
      rotate: 90deg;
    }

    &::picker(select) {
      appearance: base-select;
      border: none;
      border-radius: 8px;
      padding: 0.5em;
    }

    &:open::picker-icon {
      rotate: 0deg;
    }

    option {
      gap: 10px;
      padding: 0.25em;
      transition: 0.4s;
      border-radius: 4px;
    }
  }
}

.activeRadio {
  animation: purple-breathing 1s infinite alternate;
}

.media-button {
  display: flex;
  background: none;
  border: none;
  padding: 0;
  transition: transform 0.3s ease-in;
  &:hover {
    transform: scale(1.1);
  }

  &:focus {
    outline: none;
  }
}

.volume-button {
  padding: 0;
  margin: 0;
}

.ytCustomPlayer {
  position: fixed;
  top: 0;
  left: 0;
  width: 100vw;
  height: 100vh;
  z-index: -1;
  overflow: hidden;
  pointer-events: none;
  background-color: black;
  opacity: 1;

  &.hidden {
    opacity: 0;
  }
}

.iframeWrapper {
  position: absolute;
  top: -40%;
  left: -40%;
  width: 180%;
  height: 180%;
  pointer-events: none;
  opacity: 0.7;
  transition: opacity 0.3s ease;
}

.cardContainer {
  display: flex;
  position: relative;
  line-height: 1.25;
  gap: 1rem;
  cursor: pointer;
  transition: filter 0.3s ease-in-out, transform 0.3s ease-in-out;
  transform: scale(0.9);

  h1,
  h3,
  p {
    margin: 0;
  }

  h1 {
    font-size: 1.25rem;
  }

  p {
    font-size: 1.1rem;
    color: var(--secondary-text);
  }

  h3 {
    font-size: 0.85rem;
    color: var(--secondary-text);
  }
}

#leftContainer:has(:hover) .cardContainer:not(:hover) {
  filter: grayscale(1) brightness(0.6);
  transform: scale(0.85);
}

.cardContainer:hover {
  transform: scale(0.94);

  img {
    box-shadow: 0 4px 16px 0 black;
  }
}

.imageContainer {
  display: flex;
  position: relative;
  max-width: 50%;
  justify-content: center;
  img {
    aspect-ratio: 16/9;
    max-width: 100%;
    object-fit: cover;
    /* clip-path: inset(3% 0); */
    border-radius: 1rem;
    transition: box-shadow 0.3s ease-in-out;
  }
}

.radioInfo {
  display: flex;
  flex-direction: column;
  justify-content: space-around;
}

.mediaContainer {
  position: absolute;
  bottom: 10%;
  left: 50%;
  transform: translateX(-50%);
  width: 300px;
  background-color: rgba(255, 255, 255, 0.1);
  padding: 1.75rem 1.75rem 0 1.75rem;
  border-radius: 1rem;
  box-shadow: 0 0 30px 10px black;
  backdrop-filter: blur(8px);
}

.buttons {
  display: flex;
  flex-direction: row;
  justify-content: space-around;
}

#topWrapper {
  transform: translateY(-100%);
  width: 100vw;
  overflow: visible;
}

#topContainer {
  display: flex;
  position: relative;
  flex-direction: column;
  gap: 1em;
  box-sizing: border-box;
  overflow: hidden;
  anchor-name: --topContainer;
  justify-self: center;
  width: 100%;
  background-color: rgba(255, 255, 255, 0.1);
  padding: 0.5em;
  border-radius: 0 0 0.5rem 0.5rem;
  box-shadow: 0 0 30px 4px black;
  backdrop-filter: blur(8px);
  transition: top 0.3s ease-in-out;

  .videos {
    overflow-x: auto;
    display: flex;
    flex-direction: row;
    gap: 1rem;
  }

  .videos::-webkit-scrollbar {
    height: 6px;
  }

  .videos::-webkit-scrollbar-track {
    background: grey;
    border-radius: 2rem;
  }

  .videos::-webkit-scrollbar-thumb {
    background: purple;
    border-radius: 2rem;
  }
}

#leftWrapper {
  position: absolute;
  display: flex;
  align-items: center;
  left: 0;
  transform: translateX(-100%);
  /* background-color: red; */
  height: 100vh;
  overflow: visible;
}

#leftContainer {
  position: relative;
  anchor-name: --leftContainer;
  overflow: hidden;
  display: flex;
  flex-direction: column;
  width: 20vw;
  height: 80vh;
  background-color: rgba(255, 255, 255, 0.1);
  padding: 1em;
  border-radius: 0 0.5rem 0.5rem 0;
  gap: 1em;
  box-shadow: 0 0 30px 4px black;
  backdrop-filter: blur(8px);
  transition: filter 0.3s ease-in-out;

  .videos {
    overflow-y: auto;
    flex: 1;
    display: flex;
    flex-direction: column;
    gap: 1.5em;
    padding-right: 0.5rem;
  }

  .videos::-webkit-scrollbar {
    width: 6px;
  }

  .videos::-webkit-scrollbar-track {
    background: grey;
    border-radius: 2rem;
  }

  .videos::-webkit-scrollbar-thumb {
    background: purple;
    border-radius: 2rem;
  }
}

#openMenuButton {
  position: fixed;
  position-anchor: --leftContainer;
  position-area: center right;
  background: rgba(255, 255, 255, 0.1);
  border: none;
  border-radius: 50%;
  outline: none;
  margin-left: 3vw;
  padding: 0;
  transition: transform 0.3s ease-in-out;

  &:hover {
    transform: scale(1.1);
  }
}

#red-circle {
  width: 10px;
  height: 10px;
  background-color: red;
  border-radius: 50%;
}

#live-badge {
  display: flex;
  position: absolute;
  margin: 0.5rem;
  top: 0;
  right: 0;
  font-size: 0.75rem;
  background-color: rgba(20, 20, 20, 1);
  width: max-content;
  padding: 0.25rem;
  border-radius: 0.25rem;
  align-items: baseline;
  gap: 0.25rem;
  animation: pulse 0.75s infinite alternate;
}

.slide-in-vertical {
  animation: slide-vertical 0.3s ease-in-out forwards;
}

.slide-out-vertical {
  animation: slide-vertical 0.3s ease-in-out reverse forwards;
}

.slide-in-horizontal {
  animation: slide 0.3s ease-in-out forwards;
}

.slide-out-horizontal {
  animation: slide 0.3s ease-in-out reverse forwards;
}

@media only screen and (max-width: 1680px) {
  .cardContainer {
    flex-direction: column;
    padding-bottom: 10px;
  }

  .imageContainer {
    max-width: 100%;
  }
}

@media only screen and (max-width: 1000px) {
  .cardContainer {
    max-width: 250px;
    img {
      max-width: 200px;
      clip-path: none;
    }
  }

  #openMenuButton {
    position: absolute;
    margin-top: 5vw;
    margin-left: 0;
    position-anchor: --topContainer;
    position-area: center bottom;

    &:hover {
      transform: scale(1.1);
    }
  }
}

@media only screen and (max-width: 480px) {
  .iframeWrapper {
    top: -150%;
    left: -150%;
    width: 400%;
    height: 400%;
  }
}

@keyframes slide {
  0% {
    -webkit-transform: translateX(-100%);
  }
  100% {
    -webkit-transform: translateX(0%);
  }
}

@keyframes slide-vertical {
  0% {
    -webkit-transform: translateY(-100%);
  }
  100% {
    -webkit-transform: translateY(0%);
  }
}

@keyframes pulse {
  0% {
    -webkit-transform: scale(1);
  }
  100% {
    -webkit-transform: scale(1.05);
  }
}

@keyframes purple-breathing {
  0% {
    box-shadow: 0 0 4px 2px purple;
  }
  100% {
    box-shadow: 0 0 20px 6px purple;
  }
}

